修复退出聊天室推送消息bug

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- 登陆聊天室 -->
 	<div class="login_module">
-		<input type="text" class="username">
+		<input type="text" class="username" placeholder="请输入昵称">
 		<span class="login">进入</span>
 	</div>
 
